# shqueue

./: .gitignore  Dockerfile  docker-compose.yml  example.env  pyproject.toml
.github/: renovate.json
.github/workflows/: docker-compose-test.yml  docker-image.yml
nginx/: nginx.conf
src/app/: context_processors.py  views.py
src/apps/infoscreens/: apps.py  consumers.py  routing.py  urls.py  views.py
src/apps/main/: urls.py
src/apps/shqueue/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
src/apps/shqueue/migrations/: 0001_initial.py
src/core/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
src/core/templates/: base.html
src/core/templates/errors/: 400.html  403.html  404.html  500.html
src/core/templates/registration/: login.html
src/shauth/: apps.py  urls.py  views.py
src/static/css/: core.css
src/static/js/: auto-refresh.js  time-countdown.js
src/static/js/infoscreens/: cake.js  ws.js
src/templates/: base.html  skeleton.html
src/templates/errors/: 400.html  403.html  404.html  500.html  template.html
src/templates/infoscreens/: cake.html  template.html
src/templates/shqueue/: add_to_queue.html  index.html  view_queue.html
src/theme/static_src/: package-lock.json  package.json
