[tool.poetry]
name = "shqueue"
version = "0.0.0"
description = ""
authors = ["Glenn <glenn@not-tech.support>"]
license = "MIT"
readme = "docs/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.7"
django = "5.2.5"
gunicorn = "23.0.0"
pyjwt = "2.10.1"
psycopg2-binary = "2.9.10"
fontawesomefree = "6.6.0"
django-google-fonts = "0.0.3"
django-tailwind = {extras = ["reload"], version = "4.0.1"}
crispy-tailwind = "1.0.3"
django-crispy-forms = "2.4"
daphne = "4.1.2"
channels = "4.2.2"
channels-redis = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
