[tool.poetry]
name = "shqueue"
version = "0.0.0"
description = ""
authors = ["Glenn <glenn@not-tech.support>"]
license = "MIT"
readme = "docs/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.14.1"
django = "5.2.9"
gunicorn = "23.0.0"
pyjwt = "2.10.1"
psycopg2-binary = "2.9.11"
fontawesomefree = "6.6.0"
django-google-fonts = "0.0.3"
django-tailwind = {extras = ["reload"], version = "4.4.1"}
crispy-tailwind = "1.0.3"
django-crispy-forms = "2.5"
daphne = "4.2.1"
channels = "4.3.2"
channels-redis = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
